add_executable(testcase1 testcase1.cc)
target_link_libraries(testcase1 sim_pipe)

add_executable(testcase2 testcase2.cc)
target_link_libraries(testcase2 sim_pipe)

add_executable(testcase3 testcase3.cc)
target_link_libraries(testcase3 sim_pipe)

add_executable(testcase4 testcase4.cc)
target_link_libraries(testcase4 sim_pipe)

add_executable(testcase5 testcase5.cc)
target_link_libraries(testcase5 sim_pipe)

add_executable(testcase6 testcase6.cc)
target_link_libraries(testcase6 sim_pipe)

add_executable(testcase_fp0 testcase_fp0.cc)
target_link_libraries(testcase_fp0 sim_pipe_fp)

add_executable(testcase_fp1 testcase_fp1.cc)
target_link_libraries(testcase_fp1 sim_pipe_fp)

add_executable(testcase_fp2 testcase_fp2.cc)
target_link_libraries(testcase_fp2 sim_pipe_fp)

add_executable(testcase_fp3 testcase_fp3.cc)
target_link_libraries(testcase_fp3 sim_pipe_fp)

add_executable(testcase_fp4 testcase_fp4.cc)
target_link_libraries(testcase_fp4 sim_pipe_fp)

add_executable(testcase_fp5 testcase_fp5.cc)
target_link_libraries(testcase_fp5 sim_pipe_fp)

